--- a/Assests/css/custom/header.css
+++ b/Assests/css/custom/header.css
@@ -6,7 +6,7 @@
   width: 155px;
   height: auto;
   border-radius: 20%;
-  border: solid 3px #B39582;
+  border: solid 3px #b39582;
   padding: 5px;
 }
 
@@ -25,20 +25,34 @@
 
 .social-link {
   column-count: 3;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  transition: 0.2s;
 }
 
 .social-link a {
   color: var(--text-color);
-  padding: 0.5rem;
   border-radius: 5px;
   transition: 0.3s;
+  padding: 0.5rem;
 }
 
 .social-link a:hover {
   color: var(--body-color);
-  background-color: #B39582;
+  background-color: #b39582;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.link{
+  transition: 0.3s;
+}
+
+.link:hover{
+  transform: translateY(-5px);
+}
+
+.about-grid {
+  width: 30%;
 }
 
 .about-title {
@@ -58,15 +72,54 @@
   column-count: 2;
 }
 
-.btn-color{
-  border: 2px solid #B39582;
+.btn-color {
+  width: 300px;
+  border: 1px solid #b39582;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 2px 15px 0px;
+}
+
+.btn-color:hover {
+  background-color: #b39582;
+  border: 1px solid;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  color: #fff;
 }
 
-.btn-color:hover{
-  background-color: #B39582;
-}
+/* Small Response */
+@media (max-width: 767.98px) {
+  .avatar {
+    width: 140px;
+    height: auto;
+  }
 
-.btn-color-social{
-  background-color: var(--body-color);
+  .social-link {
+    column-count: 3;
+    font-size: 1.2rem;
+  }
+
+  .about-grid {
+    width: 50%;
+  }
+
+  .about-title {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+
+  .about-text {
+    font-weight: 500;
+    font-size: 1rem;
+    color: #212529;
+  }
+
+  .btn-color {
+    width: 190px;
+    background-color: #b39582;
+    color: #fff;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 2px 15px 0px;
+  }
+
+  .btn-color-social{
+    font-size: 1.3rem;
+  }
 }
